<resources>
    <string name="app_name" translatable="false">Open Messages</string>
    <string name="launcher_name" translatable="false">Messages</string>
    <string name="app_tagline">Simple, open-source messaging</string>
    <string name="shortcut_compose_long_label">New conversation</string>
    <string name="shortcut_compose_short_label">Compose</string>
    <string name="shortcut_compose_disabled_message">Shortcut disabled</string>
    <string name="title_archived">Archived</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification_prefs">Notifications</string>
    <string name="title_theme">Theme</string>
    <string name="theme_default">Default</string>
    <string name="theme_wallpaper">Wallpaper</string>
    <string name="theme_other_colors">Colors</string>
    <string name="theme_tab_presets">Palette</string>
    <string name="theme_tab_custom">Custom</string>
    <string name="theme_apply_to_icon">Apply color to app icon (the app will close)</string>
    <string name="theme_tab_icon">App icon</string>
    <string name="theme_icon_follow_theme">Match the app theme color</string>
    <string name="theme_icon_summary">Pick your app icon color, independently of the theme. Applying a change will close the app.</string>
    <string name="theme_icon_change_title">Change the app icon?</string>
    <string name="theme_icon_change_message">The app icon colour is about to change. Android can only swap the icon while the app is closed, so Open Messages will shut down as soon as you confirm.</string>
    <string name="title_conversations">Search inbox…</string>
    <string name="title_search">Search</string>
    <string name="title_compose">Type a name or number</string>
    <string name="title_qksms_plus" translatable="false">If you see this, send in an issue please!</string>
    <string name="setup_skip">Skip</string>
    <string name="setup_next">Continue</string>
    <string name="menu_add_person">Add person</string>
    <string name="menu_call">Call</string>
    <string name="menu_info">Details</string>
    <string name="menu_mms_part_save">Save to gallery</string>
    <string name="menu_mms_part_share">Share</string>
    <string name="menu_mms_part_forward">Forward</string>
    <string name="menu_mms_part_open">Open externally</string>
    <string name="main_drawer_open_cd">Open navigation drawer</string>
    <string name="main_title_selected">%d selected</string>
    <string name="main_menu_clear">Clear</string>
    <string name="main_menu_select_all">Select all</string>
    <string name="main_menu_archive">Archive</string>
    <string name="main_menu_unarchive">Unarchive</string>
    <string name="main_menu_delete">Delete</string>
    <string name="main_menu_add_contact">Add to contacts</string>
    <string name="main_menu_pin">Pin to top</string>
    <string name="main_menu_unpin">Unpin</string>
    <string name="main_menu_read">Mark read</string>
    <string name="main_menu_unread">Mark unread</string>
    <string name="main_menu_block">Block</string>
    <string name="main_menu_send_now">Send now</string>
    <string name="main_menu_edit_message">Edit message</string>
    <string name="main_menu_rename_conversation">Rename conversation</string>
    <string name="main_syncing">Syncing messages…</string>
    <string name="main_sync_emojis">Parsing emoji reactions…</string>
    <string name="main_sender_you">You: %s</string>
    <string name="main_sender_draft">Draft: %s</string>
    <string name="conversation_flagged_label">Suspected spam</string>
    <string name="snippet_picture">Picture</string>
    <string name="snippet_video">Video</string>
    <string name="snippet_audio">Audio</string>
    <string name="snippet_contact_card">Contact card</string>
    <string name="main_message_results_title">Results in messages</string>
    <string name="main_message_results">%d messages</string>
    <string name="inbox_empty_text">Your conversations will appear here</string>
    <string name="inbox_search_empty_text">No results</string>
    <string name="archived_empty_text">Your archived conversations will appear here</string>
    <string name="main_fab_cd">Start new conversation</string>
    <string name="main_default_sms_title">Love texting again</string>
    <string name="main_default_sms_message">Make Open Messages your default SMS app</string>
    <string name="main_default_sms_change">Change</string>
    <string name="main_permission_required">Permission required</string>
    <string name="main_permission_sms">Open Messages needs permission to send and view SMS messages</string>
    <string name="main_permission_contacts">Open Messages needs permission to view your contacts</string>
    <string name="main_permission_notifications">Open Messages needs permission to display notifications</string>
    <string name="main_permission_allow">Allow</string>
    <string name="scheduled_menu_send_now">Send now</string>
    <string name="scheduled_menu_edit_message">Edit message</string>
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_archived">Archived</string>
    <string name="drawer_scheduled">Scheduled</string>
    <string name="drawer_blocking">Blocking</string>
    <string name="drawer_more">More</string>
    <string name="message_management_title">Message Management</string>
    <string name="templates_title">Templates</string>
    <string name="templates_empty">No saved messages yet.\nTap + to save a message you send often, then tap it to choose who to send it to.</string>
    <string name="template_hint">Type your message…</string>
    <string name="template_title_hint">Title (optional)</string>
    <string name="templates_add_cd">New template</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_plus" translatable="false">DEPRECATED - drawer_plus</string>
    <string name="drawer_help">Help &amp; feedback</string>
    <string name="drawer_invite">Invite friends</string>
    <string name="drawer_plus_banner_title" translatable="false">DEPRECATED - drawer_plus_banner_title</string>
    <string name="drawer_plus_banner_summary">Unlock amazing new features, and support development</string>
    <string name="rate_title">Enjoying Open Messages?</string>
    <string name="rate_summary">Share some love and leave us a Star on GitHub!</string>
    <string name="rate_okay">OKAY!</string>
    <string name="rate_dismiss">DISMISS</string>
    <string name="dialog_delete_title">Delete</string>
    <plurals name="dialog_delete_message">
        <item quantity="one">Are you sure you would like to delete this conversation?</item>
        <item quantity="other">Are you sure you would like to delete %d conversations?</item>
    </plurals>
    <plurals name="dialog_delete_chat">
        <item quantity="one">Are you sure you would like to delete this message?</item>
        <item quantity="other">Are you sure you would like to delete %d messages?</item>
    </plurals>
    <plurals name="dialog_send_now">
        <item quantity="one">Are you sure you would like to send this message now?</item>
        <item quantity="other">Are you sure you would like to send %d messages now?</item>
    </plurals>
    <string name="dialog_edit_scheduled_message_title">Edit message</string>
    <string name="dialog_edit_scheduled_message">Editing this message will remove it from the schedule.\n\nMake sure to re-submit it on the next screen, or it will be lost.\n\nDo you want to continue?</string>
    <string name="dialog_edit_scheduled_message_positive_button">Yes, edit the message</string>
    <string name="dialog_clear_compose_title">Clear message</string>
    <string name="dialog_clear_compose">Clear the message? This action can\'t be undone.</string>
    <string-array name="message_options">
        <item>Copy text</item>
        <item>Forward</item>
        <item>Delete</item>
    </string-array>
    <string name="compose_number_picker_title">Choose a phone number</string>
    <string name="compose_number_picker_default">%s ∙ Default</string>
    <string name="compose_number_picker_once">Just once</string>
    <string name="compose_number_picker_always">Always</string>
    <string name="compose_title_selected">%d selected</string>
    <string name="compose_subtitle_results">%1$d of %2$d results</string>
    <string name="compose_send_group_title">Send as group message</string>
    <string name="compose_send_group_summary">Recipients and replies will be visible to everyone</string>
    <string name="compose_attach_file_cd">Attach any file</string>
    <string name="compose_gallery_cd">Attach a photo</string>
    <string name="compose_audio_message_cd">Record an audio message</string>
    <string name="compose_camera_cd">Take a photo</string>
    <string name="compose_schedule_cd">Schedule message</string>
    <string name="compose_contact_cd">Attach a contact</string>
    <string name="compose_attach_gallery">Gallery</string>
    <string name="compose_attach_camera">Camera</string>
    <string name="compose_attach_file">File</string>
    <string name="compose_attach_audio">Audio</string>
    <string name="compose_attach_contact">Contact</string>
    <string name="compose_attach_schedule">Schedule</string>
    <string name="compose_attach_templates">Templates</string>
    <string name="backup_location_title">Backup location</string>
    <string name="backup_location_summary">Set folder</string>
    <string name="backup_auto_title">Automatic backup</string>
    <string name="backup_auto_never">Never</string>
    <string name="backup_zip_title">Save as a .zip file</string>
    <string name="backup_zip_summary">Store each backup as a single archive, easier to move between phones</string>
    <string name="backup_manage_title">Manage backups</string>
    <string name="backup_manage_summary">Rename or delete your backups</string>
    <string name="backup_restore_title">Restore</string>
    <string name="backup_restore_summary">Select a backup</string>
    <string name="backup_disclaimer">By default, backups are saved to Documents/OpenMessages; use Backup location above to change it. Your SMS and MMS (with attachments), settings, templates, blocking rules, scheduled messages and archived or pinned conversations can all be included. Use Automatic backup above to run one on a schedule.</string>
    <string name="backup_now">Backup now</string>
    <string name="backup_now_summary">Create a new backup</string>
    <string name="blocking_drop_title">Drop messages</string>
    <string name="blocking_drop_summary">Drop incoming messages from blocked senders instead of hiding them</string>
    <string name="blocking_category_integrated">Integrated blocking</string>
    <string name="blocking_integrated_description">Open Messages blocks spam on your device. The optional sources below download their list over the internet when you turn them on, then work offline.</string>
    <string name="blocking_category_external_apps">External apps</string>
    <string name="blocked_numbers_summary">Numbers you block yourself</string>
    <string name="blocking_source_phishing_title">Anti-phishing</string>
    <string name="blocking_source_phishing_summary">Blocks messages linking to known phishing sites. Turning this on downloads the list over the internet; filtering is offline afterwards.</string>
    <string name="blocking_source_flag_block_title">Block suspected spam</string>
    <string name="blocking_source_flag_block_summary">Send messages tagged as potential spam straight to the blocked list instead of just labelling them in the inbox</string>
    <string name="blocking_manager_title">Blocking Manager</string>
    <string name="blocked_numbers_title">Blocked numbers</string>
    <string name="message_content_filters_title">Message content filters</string>
    <string name="blocked_messages_title">Blocked messages</string>
</resources>