<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Moez Bhatti <moez.bhatti@gmail.com>
  ~
  ~ This file is part of Open Messages.
  ~
  ~ Open Messages is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Open Messages is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Open Messages.  If not, see <http://www.gnu.org/licenses/>.
  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/progressIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    app:tint="?android:attr/textColorSecondary"
                    app:layout_constraintBottom_toBottomOf="@id/progressSummary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/progressTitle"
                    tools:src="@drawable/ic_file_download_black_24dp" />

                <io.openmessages.common.widget.QkTextView
                    android:id="@+id/progressTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/progressCancel"
                    app:layout_constraintStart_toEndOf="@id/progressIcon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:textSize="primary"
                    tools:text="Restoring from backup" />

                <io.openmessages.common.widget.QkTextView
                    android:id="@+id/progressSummary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="?android:attr/textColorTertiary"
                    app:layout_constraintEnd_toEndOf="@id/progressTitle"
                    app:layout_constraintStart_toStartOf="@id/progressTitle"
                    app:layout_constraintTop_toBottomOf="@id/progressTitle"
                    app:textSize="secondary"
                    tools:text="8 minutes remaining" />

                <ImageView
                    android:id="@+id/progressCancel"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="16dp"
                    android:src="@drawable/ic_close_black_24dp"
                    app:tint="?android:attr/textColorSecondary"
                    app:layout_constraintBottom_toBottomOf="@id/progressSummary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/progressTitle" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/progressTitle"
                    app:layout_constraintTop_toBottomOf="@id/progressSummary" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="?android:attr/divider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progressBar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <io.openmessages.common.widget.PreferenceView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_folder_24"
                app:title="@string/backup_location_title"
                app:summary="@string/backup_location_summary" />

            <io.openmessages.common.widget.PreferenceView
                android:id="@+id/autoBackup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_av_timer_black_24dp"
                app:title="@string/backup_auto_title"
                tools:summary="@string/backup_auto_never" />

            <io.openmessages.common.widget.PreferenceView
                android:id="@+id/zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_folder_24"
                app:title="@string/backup_zip_title"
                app:summary="@string/backup_zip_summary"
                app:widget="@layout/settings_switch_widget" />

            <io.openmessages.common.widget.PreferenceView
                android:id="@+id/manage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_settings_black_24dp"
                app:title="@string/backup_manage_title"
                app:summary="@string/backup_manage_summary" />

            <io.openmessages.common.widget.PreferenceView
                android:id="@+id/backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_file_upload_black_24dp"
                app:summary="@string/backup_now_summary"
                app:title="@string/backup_now" />

            <io.openmessages.common.widget.PreferenceView
                android:id="@+id/restore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_file_download_black_24dp"
                app:summary="@string/backup_restore_summary"
                app:title="@string/backup_restore_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/divider" />

            <io.openmessages.common.widget.QkTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/backup_disclaimer"
                android:textColor="?android:attr/textColorTertiary"
                app:textSize="secondary" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>